--- a/src/app/module/privacy-policy/privacy-policy.component.html
+++ b/src/app/module/privacy-policy/privacy-policy.component.html
@@ -45,7 +45,7 @@
                             You acknowledge that this Privacy Policy is a part of the Terms of Use of the Website and the other Services, and you unconditionally agree that becoming a User of the Website and its Services signifies your
 
                             <li>(i) assent to this Privacy Policy, and</li>
-                            <li>(ii) consent to <b>Teladent </b> using, collecting, processing and/or disclosing your Personal Information in the manner and for the purposes set out in this Privacy Policy</li>
+                            <li>(ii) consent to Teladent using, collecting, processing and/or disclosing your Personal Information in the manner and for the purposes set out in this Privacy Policy</li>
                             Your visit to the Website and use of the Services is subject to this Privacy Policy and the Terms of Use.
                         </p>
 
@@ -53,31 +53,30 @@
                     <div class="terms-text">
                         <h4>CONFIDENTIALITY AND SECURITY</h4>
                         <p>
-                            Your Personal Information is maintained by <b>Teladent </b> in electronic form on its equipment, and on the equipment of its employees. Such information may also be converted to physical form from time to time. <b>Teladent </b>                            takes all necessary precautions to protect your personal information both online and off-line, and implements reasonable security practices and measures including certain managerial, technical, operational and physical security
-                            control measures that are commensurate with respect to the information being collected and the nature of <b>Teladent</b>’s business.
+                            Your Personal Information is maintained by Teladent in electronic form on its equipment, and on the equipment of its employees. Such information may also be converted to physical form from time to time. Teladent takes all necessary precautions to protect
+                            your personal information both online and off-line, and implements reasonable security practices and measures including certain managerial, technical, operational and physical security control measures that are commensurate
+                            with respect to the information being collected and the nature of Teladent’s business.
                         </p>
 
                         <p>
-                            No administrator at <b>Teladent </b> will have knowledge of your password. It is important for you to protect against unauthorized access to your password, your computer and your mobile phone. Be sure to log off from the Website
-                            when finished. <b>Teladent </b> does not undertake any liability for any unauthorised use of your account and password. If you suspect any unauthorized use of your account, you must immediately notify <b>Teladent </b> by sending
-                            an email to
-                            <a href="support@Teladent.com"> support@Teladent.com</a> You shall be liable to indemnify <b>Teladent </b> due to any loss suffered by it due to such unauthorized use of your account and password.
+                            No administrator at Teladent will have knowledge of your password. It is important for you to protect against unauthorized access to your password, your computer and your mobile phone. Be sure to log off from the Website when finished. Teladent does not
+                            undertake any liability for any unauthorised use of your account and password. If you suspect any unauthorized use of your account, you must immediately notify Teladent by sending an email to
+                            <a href="support@Teladent.com"> support@Teladent.com</a> You shall be liable to indemnify Teladent due to any loss suffered by it due to such unauthorized use of your account and password.
                         </p>
 
                         <p>
-                            <b>Teladent </b> makes all User information accessible to its employees, agents or partners and third parties only on a need-to-know basis, and binds only its employees to strict confidentiality obligations.
+                            Teladent makes all User information accessible to its employees, agents or partners and third parties only on a need-to-know basis, and binds only its employees to strict confidentiality obligations.
                         </p>
 
                         <p>
-                            Part of the functionality of <b>Teladent </b> is assisting the doctors to maintain and organise such information. <b>Teladent </b> may, therefore, retain and submit all such records to the appropriate authorities, or to doctors
-                            who request access to such information.
+                            Part of the functionality of Teladent is assisting the doctors to maintain and organise such information. Teladent may, therefore, retain and submit all such records to the appropriate authorities, or to doctors who request access to such information.
                         </p>
 
                         <p>
-                            Part of the functionality of the <b>Teladent </b> is assisting the patients to access information relating to them. <b>Teladent </b> may, therefore, retain and submit all such records to the relevant patients, or to their doctors.
-                            4.6 Not with standing the above, Teladent is not responsible for the confidentiality, security or distribution of your Personal Information by our partners and third parties outside the scope of our agreement with such partners
-                            and third parties. Further, Teladent shall not be responsible for any breach of security or for any actions of any third parties or events that are beyond the reasonable control of <b>Teladent </b> including but not limited
-                            to, acts of government, computer hacking, unauthorised access to computer data and storage device, computer crashes, breach of security and encryption, poor quality of Internet service or telephone service of the User etc.
+                            Part of the functionality of the Teladent is assisting the patients to access information relating to them. Teladent may, therefore, retain and submit all such records to the relevant patients, or to their doctors. 4.6 Not with standing the above, Teladent
+                            is not responsible for the confidentiality, security or distribution of your Personal Information by our partners and third parties outside the scope of our agreement with such partners and third parties. Further, Teladent
+                            shall not be responsible for any breach of security or for any actions of any third parties or events that are beyond the reasonable control of Teladent including but not limited to, acts of government, computer hacking, unauthorised
+                            access to computer data and storage device, computer crashes, breach of security and encryption, poor quality of Internet service or telephone service of the User etc.
 
                         </p>
 
