--- a/src/app/module/patient-panel/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/module/patient-panel/patient-dashboard/patient-dashboard.component.html
@@ -47,10 +47,30 @@
                                             <table class="table table-hover table-center mb-0">
                                                 <thead>
                                                     <tr>
-                                                        <th>Doctor</th>
-                                                        <th>Appt Date</th>
-                                                        <th>Booking Date</th>
-                                                        <th>Amount</th>
+                                                        <th class="cur-pointer" (click)="setOrder('name')">Doctor
+                                                            <span>
+                                                                <a href="javascript:void(0);" [hidden]="reverse"><i class="fa fa-long-arrow-alt-up"></i></a>
+                                                                <a href="javascript:void(0);" [hidden]="!reverse"><i class="fa fa-long-arrow-alt-down"></i></a>
+                                                            </span>
+                                                        </th>
+                                                        <th class="cur-pointer" (click)="setOrder('appt')">Appt Date
+                                                            <span>
+                                                                <a href="javascript:void(0);" [hidden]="reverse"><i class="fa fa-long-arrow-alt-up"></i></a>
+                                                                <a href="javascript:void(0);" [hidden]="!reverse"><i class="fa fa-long-arrow-alt-down"></i></a>
+                                                            </span>
+                                                        </th>
+                                                        <th class="cur-pointer" (click)="setOrder('slotStartDateAndTime')">Booking Date
+                                                            <span>
+                                                                <a href="javascript:void(0);" [hidden]="reverse"><i class="fa fa-long-arrow-alt-up"></i></a>
+                                                                <a href="javascript:void(0);" [hidden]="!reverse"><i class="fa fa-long-arrow-alt-down"></i></a>
+                                                            </span>
+                                                        </th>
+                                                        <th class="cur-pointer" (click)="setOrder('paidAmount')">Amount
+                                                            <span>
+                                                                <a href="javascript:void(0);" [hidden]="reverse"><i class="fa fa-long-arrow-alt-up"></i></a>
+                                                                <a href="javascript:void(0);" [hidden]="!reverse"><i class="fa fa-long-arrow-alt-down"></i></a>
+                                                            </span>
+                                                        </th>
                                                         <th class="text-center">Status</th>
                                                         <th class="text-center">Action</th>
                                                     </tr>
