--- a/src/app/module/assessment-result/assessment-result.component.html
+++ b/src/app/module/assessment-result/assessment-result.component.html
@@ -27,18 +27,36 @@
                             <div class="row">
                                 <div class="col-sm-8">
                                     <div class="imgtdiv">
-                                        <div class="yellocircle">
+                                        <div class="yellocircle" *ngIf="assessmentResult?.assessmentPercent >= 0 && assessmentResult?.assessmentPercent <= 50">
+                                            <img src="assets/img/oralself/redcricle.svg" class="circle">
+                                            <img src="assets/img/oralself/emojired.svg" class="emoji">
+                                            <div class="scorecir">
+                                                <h6 style="color: #a52a2a !important;">{{assessmentResult?.assessmentPercent}}</h6>
+                                                <p>Out of 100</p>
+                                            </div>
+
+                                        </div>
+                                        <div class="yellocircle" *ngIf="assessmentResult?.assessmentPercent > 50 && assessmentResult?.assessmentPercent <= 80">
                                             <img src="assets/img/oralself/yellowcircle.svg" class="circle">
                                             <img src="assets/img/oralself/emoji.svg" class="emoji">
                                             <div class="scorecir">
-                                                <h6>100</h6>
+                                                <h6>{{assessmentResult?.assessmentPercent}}</h6>
+                                                <p>Out of 100</p>
+                                            </div>
+
+                                        </div>
+                                        <div class="yellocircle" *ngIf="assessmentResult?.assessmentPercent > 80 && assessmentResult?.assessmentPercent <= 100">
+                                            <img src="assets/img/oralself/greencricle.svg" class="circle">
+                                            <img src="assets/img/oralself/emojigreen.svg" class="emoji">
+                                            <div class="scorecir">
+                                                <h6 style="color: #82f982 !important;">{{assessmentResult?.assessmentPercent}}</h6>
                                                 <p>Out of 100</p>
                                             </div>
 
                                         </div>
 
                                         <div class="namediv">
-                                            <h4>Hi Drake, your smile score</h4>
+                                            <h4>Hi {{assessmentResult?.userDetails?.name}}, your smile score</h4>
                                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s
 
                                             </p>
@@ -105,7 +123,7 @@
                                 </div>
                             </div>
 
-                            <div class="bookbt">BOOK AN APPOINTMENT</div>
+                            <div class="bookbt" (click)="patientRouter('online', 'login-modal', '/web-panel/online-consultation?limit=10&skip=0', 'user')">BOOK AN APPOINTMENT</div>
                         </div>
 
 
