--- a/src/app/module/review/review.component.html
+++ b/src/app/module/review/review.component.html
@@ -3,11 +3,11 @@
   <div class="row row-centered">
     <div class="col-xs-2 col-md-2"></div>
     <div class="col-xs-8 col-md-8 col-centered">
-      <h1 class="text-center font-consistent">Company Name</h1>
+      <h1 class="text-center font-consistent">Teladent</h1>
       <address class="text-center font-consistent">
-        1355 Market Street, Suite 900
-        San Francisco, CA 94103
-        P: (123) 456-7890
+        Nh 8, Avenue Bouganvillea, Mahipalpur,
+        New Delhi, Delhi 110037
+        P: (91) 9899799981
       </address>
       <div class="top-buffer"></div>
       <svg class="fb-emotes-svg" style="display: none;">
@@ -38,59 +38,59 @@
         </symbol>
       </svg>
       <h2 class="text-center font-consistent">How was the help you received?</h2>
-          <div class="fb-cont">
+      <div class="fb-cont">
 
-            <div class="fb-cont__inner">
-              <div class="fb-emote" data-emote="terrible">
-                <svg>
-                  <use xlink:href="#fb-emote-terrible" />
-                </svg>
-                <p class="fb-emote__caption">Terrible</p>
-              </div>
-              <div class="fb-emote" data-emote="bad">
-                <svg>
-                  <use xlink:href="#fb-emote-bad" />
-                </svg>
-                <p class="fb-emote__caption">Bad</p>
-              </div>
-              <div class="fb-emote s--active" data-emote="okay">
-                <svg>
-                  <use xlink:href="#fb-emote-okay" />
-                </svg>
-                <p class="fb-emote__caption">Okay</p>
-              </div>
-              <div class="fb-emote" data-emote="good">
-                <svg>
-                  <use xlink:href="#fb-emote-good" />
-                </svg>
-                <p class="fb-emote__caption">Good</p>
-              </div>
-              <div class="fb-emote" data-emote="great">
-                <svg>
-                  <use xlink:href="#fb-emote-great" />
-                </svg>
-                <p class="fb-emote__caption">Great</p>
-              </div>
-              <div class="fb-cont__drag-cont">
-                <div class="fb-active-emote">
-                  <svg viewBox="0 0 100 100">
-                    <path class="fb-active-emote__eye fb-active-emote__eye--left" d="M32,25 a10,10 0 0,1 0,20 a10,10 0 0,1 0,-20" />
-                    <path class="fb-active-emote__eye fb-active-emote__eye--right" d="M68,25 a10,10 0 0,1 0,20 a10,10 0 0,1 0,-20" />
-                    <path class="fb-active-emote__smile" d="M35,73 q20,-4 35,-8 M35,73 q20,-4 35,-8" />
-                  </svg>
-                </div>
-              </div>
+        <div class="fb-cont__inner">
+          <div class="fb-emote" data-emote="terrible" (click)="smileyFeedback(1)">
+            <svg>
+              <use xlink:href="#fb-emote-terrible" />
+            </svg>
+            <p class="fb-emote__caption">Terrible</p>
+          </div>
+          <div class="fb-emote" data-emote="bad" (click)="smileyFeedback(2)">
+            <svg>
+              <use xlink:href="#fb-emote-bad" />
+            </svg>
+            <p class="fb-emote__caption">Bad</p>
+          </div>
+          <div class="fb-emote s--active" data-emote="okay" (click)="smileyFeedback(3)">
+            <svg>
+              <use xlink:href="#fb-emote-okay" />
+            </svg>
+            <p class="fb-emote__caption">Okay</p>
+          </div>
+          <div class="fb-emote" data-emote="good" (click)="smileyFeedback(4)">
+            <svg>
+              <use xlink:href="#fb-emote-good" />
+            </svg>
+            <p class="fb-emote__caption">Good</p>
+          </div>
+          <div class="fb-emote" data-emote="great" (click)="smileyFeedback(5)">
+            <svg>
+              <use xlink:href="#fb-emote-great" />
+            </svg>
+            <p class="fb-emote__caption">Great</p>
+          </div>
+          <div class="fb-cont__drag-cont">
+            <div class="fb-active-emote">
+              <svg viewBox="0 0 100 100">
+                <path class="fb-active-emote__eye fb-active-emote__eye--left"
+                  d="M32,25 a10,10 0 0,1 0,20 a10,10 0 0,1 0,-20" />
+                <path class="fb-active-emote__eye fb-active-emote__eye--right"
+                  d="M68,25 a10,10 0 0,1 0,20 a10,10 0 0,1 0,-20" />
+                <path class="fb-active-emote__smile" d="M35,73 q20,-4 35,-8 M35,73 q20,-4 35,-8" />
+              </svg>
             </div>
           </div>
-          <div class="input-group">
-            <textarea class="form-control custom-control" rows="3" cols="120" style="resize:none" placeholder="Review1"></textarea>
-          </div>
-          <div class="top-buffer"></div>
-          <div class="input-group">
-            <textarea class="form-control custom-control" rows="3" cols="120" style="resize:none" placeholder="Review2"></textarea>
-          </div>
-          <div class="top-buffer"></div>
-          <button type="button" class="btn btn-primary btn-lg text-center ">Submit</button>
+        </div>
+      </div>
+      <div class="input-group">
+        <textarea class="form-control custom-control" rows="3" cols="120" style="resize:none" placeholder="FeedBack (Atleast 50 characters.)"
+          (keyup)="feedbackReview()" id="feedReview"></textarea>
+      </div>
+      <div class="top-buffer"></div>
+      <p *ngIf="feedbackErr.length > 0" class="feedback_err"><strong>{{feedbackErr}}</strong></p>
+      <button type="button" class="btn btn-primary btn-lg text-center " (click)="onSubmit()">Submit</button>
     </div>
     <div class="col-xs-2 col-md-2 col-centered"></div>
 
